Add Scrambled Eggs Recipe and Image

--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -7,6 +7,21 @@
 </head>
 <body>
     <h1>Scrambled Eggs</h1>
-    
+    <img src="../images/scrambledeggs" alt="scrambled eggs on a plate">
+    <h2>Scrambled eggs on a plate</h2>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Three eggs</li>
+        <li>1 Tbs of butter (more if you prefer)</li>
+        <li>Salt and pepper to taste</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Put the butter in a nonstick skillet and turn in on. While the butter is heating up, whisk the eggs in a bowl with a few pinches of salt.</li>
+        <li>When the eggs are whisked, pour them into the pan. Stir constantly with a spatula. The eggs should absorb the butter.</li>
+        <li>When the eggs are cooked to your liking, turn them out onto a plate. Add pepper if desired and enjoy.</li>
+    </ol>
 </body>
 </html>
