Add eggs and yogurt content
Add description to scrambled eggs recipe

Add content and description to cranberry cookie dough page.

--- a/recipes/pumpkinpiepancake.html
+++ b/recipes/pumpkinpiepancake.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Jumbo Pumpkin Pie Pancake for One</h1>
+    <img src="../images/pumpkinpiepancake.jpg" alt="big pumpkin pie pancake with pumpkin syrup">
+    <h2>Description</h2>
+    <p>Like I said in the scrambled eggs recipe, I got that diatary restriction rizz. Greek yogurt is a quick and easy snack that keeps my blood sugar happy happy happy. This recipe is so delicious and easy to whip up, even if you don't know the difference between a doonk and a dash. Most of the time, however, I do just mix a little spoon of sugar-free jelly in my Greek yogurt. Come to find out that even natural fruit sugar makes my pancreas sad, so I'll be sticking to stevia from now on.</p>
+    <p>This recipe is taken from <a href="https://www.briana-thomas.com/katelyns-cranberry-cookie-dough-snack/">BrianaThomas.com</a>.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>⅔ cup Greek yogurt or cottage cheese (or a combination of the two)</li>
+        <li>2 T old fashioned oats (use gluten free if necessary)*</li>
+        <li>2 T chopped fresh cranberries</li>
+        <li>⅛ tsp. almond extract</li>
+        <li>⅛ tsp. maple extract</li>
+        <li>3 doonks THM Pure Stevia Extract Powder (a doonk is 1/32 tsp.)</li>
+        <li>Dash of salt</li>
+        <li>Chopped unsweetened baker's chocolate, 85% dark chocolate, or Lily's brand chocolate</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Stir all the ingredients together and enjoy! Yields one serving.</li>
+    </ol>
 </body>
 </html>
