--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Scrambled Eggs</h1>
-    <img src="../images/scrambledeggs" alt="scrambled eggs on a plate">
-    <h2>Scrambled eggs on a plate</h2>
+    <img src="../images/scrambledeggs.jpg" alt="scrambled eggs on a plate" width="80%">
+    <h2>Description</h2>
+    <p>This is a recipe everyone should know how to make. It's what I eat most mornings to keep my insulin resistance under control. Did you know you are most sensitive to insulin in the morning? If you have diabeties in your family or suspect you're on the way to Type 2 yourself, a high-protein and high-fat breakfast is the best way to start your day. Most breakfasts are loaded with carbs and sugar that wreak havoc on your blood sugar and make your pancreas cry tears of torment. Even if you don't have that diatary restriction rizz, eggs are a quick, delicious way to begin any morning.
+    </p>
 
     <h3>Ingredients</h3>
     <ul>
