Edit typo and add img width in pumpkin pie pancake recipe

--- a/recipes/pumpkinpiepancake.html
+++ b/recipes/pumpkinpiepancake.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Jumbo Pumpkin Pie Pancake for One</h1>
-    <img src="../images/pumpkinpiepancake.jpg" alt="big pumpkin pie pancake with pumpkin syrup">
+    <img src="../images/pumpkinpiepancake.jpg" alt="big pumpkin pie pancake with pumpkin syrup" width="80%">
     <h2>Description</h2>
-    <p>Like I said in the scrambled eggs recipe, I got that diatary restriction rizz. Greek yogurt is a quick and easy snack that keeps my blood sugar happy happy happy. This recipe is so delicious and easy to whip up, even if you don't know the difference between a doonk and a dash. Most of the time, however, I do just mix a little spoon of sugar-free jelly in my Greek yogurt. Come to find out that even natural fruit sugar makes my pancreas sad, so I'll be sticking to stevia from now on.</p>
+    <p>Like I said in the scrambled eggs recipe, I got that dietary restriction rizz. Greek yogurt is a quick and easy snack that keeps my blood sugar happy happy happy. This recipe is so delicious and easy to whip up, even if you don't know the difference between a doonk and a dash. Most of the time, however, I do just mix a little spoon of sugar-free jelly in my Greek yogurt. Come to find out that even natural fruit sugar makes my pancreas sad, so I'll be sticking to stevia from now on.</p>
     <p>This recipe is taken from <a href="https://www.briana-thomas.com/katelyns-cranberry-cookie-dough-snack/">BrianaThomas.com</a>.</p>
 
     <h3>Ingredients</h3>
