Edit pages and add content
Move the steps list from the cranberrycookiedoughsnack page to the
pumpkinpiepancake page. Finish adding content to the
cranberrycookiedoughsnack page.

--- a/recipes/cranberrycookiedoughsnack.html
+++ b/recipes/cranberrycookiedoughsnack.html
@@ -22,5 +22,10 @@
         <li>Dash of salt</li>
         <li>Chopped unsweetened baker's chocolate, 85% dark chocolate, or Lily's brand chocolate</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Stir all the ingredients together and enjoy! Yields one serving.</li>
+    </ol>
 </body>
 </html>
