--- a/recipes/pumpkinpiepancake.html
+++ b/recipes/pumpkinpiepancake.html
@@ -9,25 +9,27 @@
     <h1>Jumbo Pumpkin Pie Pancake for One</h1>
     <img src="../images/pumpkinpiepancake.jpg" alt="big pumpkin pie pancake with pumpkin syrup" width="80%">
     <h2>Description</h2>
-
-    <h3>Steps</h3>
-    <ol>
-        <li>Stir all the ingredients together and enjoy! Yields one serving.</li>
-    </ol>
-    <h2></h2>
+    <p>Sometimes I get tired of eggs. This is my favorite high-protein breakfast when I have time in the morning. Fair warning, the Baking Blend has a weird texture, but it's not bad. I add a tablespoon of butter to the top and sometimes make a lite bulletproof coffee to get some good fats in.</p>
+    <p>This recipe taken from <a href="https://www.briana-thomas.com/jumbo-pumpkin-pie-pancake-for-one/">BrianaThomas.com</a>.</p>
 
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>2 eggs</li>
+        <li>3 T plain canned pumpkin<li></li>
+        <li>½ tsp. vanilla extract</li>
+        <li>2 T ground golden flax and 1 T oat fiber (use gluten free if necessary) *or* 4 T Briana's Baking Mix</li>
+        <li>¼ tsp. baking powder</li>
+        <li>Scant ⅛ tsp. salt</li>
+        <li>2-3 doonks THM Pure Stevia </li>Extract Powder (a doonk is 1/32 tsp.)
+        <li>1 tsp. cinnamon</li>
+        <li>⅛ tsp. ground cloves, optional but awesome</li>
+        <li>Suggested toppings: butter, sugar-free syrup, cream cheese, Pumpkin Spice Syrup</li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>In a small bowl, whisk the eggs, pumpkin, and vanilla. Add the dry ingredients and stir well until combined.</li>
+        <li>Spray a small non-stick skillet with non-stick cooking spray and let it heat over medium heat. When the pan is hot, spoon in your pancake batter and spread it out into one big pancake that is still on the thick side. Let it cook for a couple minutes on one side, then flip it over and do the same on the other side. I like to leave mine slightly underdone on the inside (use farm fresh eggs if you intend to do that). When the pancake is done to your liking (you can test it with a toothpick), put it on a plate, slather it up with your toppings of choice, and dig in!</li>
     </ol>
 </body>
 </html>
