--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/scrambledeggs.html">Scrambled Eggs</a>
+    <ul>
+        <li><a href="./recipes/scrambledeggs.html">Scrambled Eggs</a></li>
+        <li><a href="./recipes/cranberrycookiedoughsnack.html">Cranberry Cookie Dough</a></li>
+        <li><a href="./recipes/pumpkinpiepancake.html">Pumpkin Pie Pancake</a></li>
+    </ul>
 </body>
 </body>
 </html>
